# nobleedgeapi

./: README.md  alembic.ini  check_role.py  check_role2.py  debug.txt  investment_plans.json  promote_admin.py  pyproject.toml  requirements.txt  test_admin_endpoints.py  test_api.py  test_deposit_addresses.py  test_mail.py  test_profile.py  test_put.py  test_settings.py  vercel.json
alembic/: env.py
alembic/versions/: 5afb87962c79_initial_migration.py  6dd0f9066d14_add_settings_table.py  6df41f011590_add_connected_wallet_to_wallet.py  b5ca1eda1418_initial_migration2n.py  d714063daa72_add_card_model.py  ddc24436d31b_initial_migration2n.py  fb411f7e86e7_add_custom_deposit_addresses.py
app/: bluewave-app.code-workspace  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  card.py  investment.py  notification.py  plan.py  referral.py  session.py  settings.py  transaction.py  user.py  wallet.py
app/routers/: __init__.py  auth.py  cards.py  investment.py  notification.py  referral.py  settings.py  user.py  wallet.py
app/routers/admin/: __init__.py  dashboard.py  (+4 more)
app/schemas/: __init__.py  auth.py  card.py  investment.py  notification.py  plan.py  referral.py  settings.py  transaction.py  user.py  wallet.py
app/security/: hashing.py  jwt.py
app/services/: auth_service.py  email_service.py  investment_service.py  roi_scheduler.py  wallet_service.py
app/utils/: enums.py
templates/email/: base.html  investment_notification.html  investment_roi.html  transaction_approved.html  transaction_initiated.html  verification.html  welcome.html
