[project]
name = "bluewave"
version = "0.1.0"
description = "BlueWave Investment Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "fastapi-mail>=1.4.1",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.4",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pymysql>=1.1.2",
    "a2wsgi>=1.10.10",
    "mangum>=0.21.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
]
